--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.14",
+    "framer-motion": "^12.23.24",
     "i18next": "^25.6.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.0.0",
+    "react-intersection-observer": "^9.16.0",
     "sweetalert2": "^11.26.2",
     "tailwindcss": "^4.1.14"
   },
